<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_detail"
    tools:context=".fragment.DetailFragment">

        <ProgressBar
            android:id="@+id/pb_0"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:civ_border_color="@color/green"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_username_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dummy_username" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_detail"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_follower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/followers"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_following_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar_detail" />

        <TextView
            android:id="@+id/tv_following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/following"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_follower_text"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar_detail" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower_text"
            tools:text="@string/dummy_followers" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_following_text"
            tools:text="@string/dummy_following" />


        <TextView
            android:id="@+id/tv_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:textSize="12sp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar_detail" />

        <TextView
            android:id="@+id/tv_company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_company_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower"
            tools:text="@string/dummy_company" />

        <TextView
            android:id="@+id/tv_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company_text" />

        <TextView
            android:id="@+id/tv_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tv_location_text"
            app:layout_constraintTop_toBottomOf="@id/tv_company_detail"
            tools:text="@string/dummy_location" />



</androidx.constraintlayout.widget.ConstraintLayout>
